--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,7 +5,7 @@ server {
     root docs/fusion_web/;
     # client_max_body_size 3000000;
 	index index.html;
-    error_page 404 error_pages/404.html;     #error_code relative_path
+    error_page 404 error_pages/404.html;
 
     location / {
         allow_methods  DELETE POST GET;
@@ -23,7 +23,7 @@ server {
 	}
 
     location /cgi-bin {
-        # root /Users/anastasiianifantova/Desktop/ft-server;
+        root ./;
         allow_methods GET POST DELETE;
         index time.py;
         cgi_path /usr/bin/python3 /bin/bash;
